--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.1",
-    "socket.io": "^3.1.1"
+    "socket.io": "^3.1.1",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "swagger-autogen": "^2.23.7"
   }
 }
